--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,12 @@ Blockquote
 Tables and graphs
 ******************************************************************/
 .collapsible {
-  background-color: #777;
-  color: #FFFFFF;
+  color: #555555;
+  background-color: #EDEDED;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -325,7 +329,7 @@ Tables and graphs
   outline: none;
   font-size: 15px;
   font-family: 'Droid Serif', Apud-Medium, sans-serif;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin: 20px;
   display: block;
   
@@ -333,7 +337,7 @@ Tables and graphs
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: #aaaaaa;
 }
 
 .collapsible:after {
