--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,379 @@
+/******************************************************************
+*******************************************************************
+
+Template Name: Effe
+Theme URI: http://www.92five.net
+Description: Personal Blog
+Author: 92five
+Author URI: http://www.92five.net
+Version: 1.0
+							
+Designed & Handcrafted by 92five for 92five.net
+									
+*******************************************************************
+******************************************************************/
+									
+									
+/******************************************************************
+This is the CSS Reset
+******************************************************************/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after, q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.toc-list, .toc-list ol {
+  list-style-type: none;
+}
+
+.toc-list {
+  padding: 0;
+}
+
+.toc-list ol {
+  padding-inline-start: 2ch;
+}
+/******************************************************************
+TEXT SELECTION STYLES
+******************************************************************/
+/* Safari, Chrome, iPhones, iPads */
+::selection {
+ background:#E095B4;
+ color:#fff;
+}
+::-moz-selection {
+ background:#E095B4;
+ color:#fff;
+}
+::-webkit-selection {
+ background:#E095B4;
+ color:#fff;
+}
+a {
+	color: #E095B4;
+	outline: none;
+}
+
+/******************************************************************
+Import fonts
+******************************************************************/
+
+@font-face {
+    font-family: Apud-Black;
+    src: url("../font/DSType - Apud-Black.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: Apud-Roman;
+    src: url("../font/DSType - Apud-Roman.otf") format('truetype');
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: Apud-Medium;
+    src: url("../font/DSType - Apud-Medium.otf") format('truetype');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Apud-BoldItalic;
+    src: url("../font/DSType - Apud-BoldItalic.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+/******************************************************************
+General CSS
+******************************************************************/
+									
+#content {
+	width: 900px;
+	padding-top: 20px;
+	padding-left: 15px;
+	margin-left: 260px;
+	z-index: 1;
+}
+
+
+.collapse-content {
+  display: none;
+  overflow: hidden;
+
+}
+
+
+p {
+	font-family: Apud-Roman;
+	line-height: 2em;
+	color: #1c1a1a;
+	font-size: 11pt;
+}
+
+p2 {
+	font-family: Apud-Roman;
+	line-height: 2em;
+	color: #1c1a1a;
+	font-size: 8pt;
+}
+h1 {
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 22pt;
+}
+h2 {
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 16pt;
+}
+h3 {
+	font-family: 'Droid Serif',Apud-BoldItalic, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 14pt;
+}
+h4 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1a;
+	text-decoration: none;
+	font-size: 13pt;
+}
+h5 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1aF;
+	text-decoration: none;
+	font-size: 11pt;
+}
+h6 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1a;
+	text-decoration: none;
+	font-size: 10pt;
+}
+
+sup {font-size:xx-small; vertical-align:super;}
+/******************************************************************
+Menu CSS
+******************************************************************/
+#menu-wrapper {
+	height: 100%;
+	padding-top: 50px;
+	float: left;
+	width: 200px;
+}
+#main-menu {
+	position: fixed;
+	width: 200px;
+	padding-top: 80px;
+	padding-left: 20px;
+	padding-left: 20px;
+	padding-right: 30px;
+	border-right: solid;
+	border-color: #D7D7D7;
+	border-width: thin;
+	background-color: #f0f0f0;
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	overflow-y: scroll;
+	top: 0;
+  	bottom: 0;
+	word-wrap: break-word;
+	z-index: 2;
+}
+#main-menu a {
+	color: #707070;
+	text-decoration: none;
+	font-size: 14pt;
+}
+#main-menu a:hover {
+	color: #121212;
+}
+#main-menu li {
+	padding: 2px 0 2px 0;
+}
+#main-menu .selected {
+	color: #121212;
+}
+
+
+/******************************************************************
+Some Nivo Customization CSS
+For easy editing (the main Nivo CSS is in nivo-theme.css)
+******************************************************************/
+
+.theme-effe .nivo-caption {
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 14px;
+}
+.theme-effe .nivo-caption h1 {
+	padding: 50px 10px 5px 10px;
+}
+.theme-effe .nivo-caption p {
+	padding: 5px 20px 20px 20px;
+	text-align: justify;
+}
+.theme-effe .nivo-caption .readmore {
+	position: absolute;
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 16px;
+	color: #999;
+	text-decoration: none;
+	bottom: 20px;
+	left: 160px;
+}
+
+/******************************************************************
+Dividers
+******************************************************************/
+.spacer {
+	height: 1px;
+	clear: both;
+	border-bottom: 1px;
+	border-style: solid;
+	border-color: #d6d6d6;
+	margin: 20px 5px 20px 5px;
+}
+.blank-spacer {
+	height: 1px;
+	clear: both;
+	margin: 10px 5px 10px 5px;
+	padding: 10px 5px 10px 5px;
+}
+
+/******************************************************************
+Blockquote
+******************************************************************/
+
+.blockquote{
+  font-size: 1.4em;
+  width:70%;
+  margin:20px;
+  font-style:italic;
+  color: #555555;
+  padding:20px 30px 20px 30px;
+  border-left:5px solid #b22525 ;
+  line-height:1.6;
+  position: relative;
+  background:#EDEDED;
+  z-index: 1;
+}
+
+.blockquote::before{
+  position: absolute;
+  left: 5px;
+  top:-10px;
+}
+
+.blockquote::after{
+  content: '';
+}
+
+.blockquote span{
+  display:block;
+  color:#333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top:1em;
+}
+
+/******************************************************************
+Tables and graphs
+******************************************************************/
+.collapsible {
+  color: #555555;
+  background-color: #EDEDED;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  padding: 18px;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  font-family: 'Droid Serif', Apud-Medium, sans-serif;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  display: block;
+  width: 100%;
+  
+	
+}
+
+.active, .collapsible:hover {
+  background-color: #aaaaaa;
+}
+
+.collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #FFFFFF;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
 
 .normal-table {
 	width:90%;
-	margin: 30px 30px;
-	display:none;
+	margin: 20px 20px;
+        border-collapse: collapse;
 }
 
+.normal-table th,
 .normal-table td {
-	 padding: 5px;
+    padding: 12px 15px;
 }
-
 
 .normal-table thead {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #bcbcbc;
 	font-weight:bold;
+	text-align: left;
+
 }
 
-.normal-table tbody tr:last-of-type {
-    border-bottom: 1px solid #bcbcbc;
+.normal-table tfoot td:first-of-type {
+    border-top: 1px solid #bcbcbc;
 }
 
 .normal-table tbody tr:hover td:not(
@@ -29,17 +384,92 @@
 	background: none;
 }
 
-.labels tr td {
-	background-color: #2cc16a;
-	font-weight: bold;
-	color: #fff;
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 30px 30px;
+    font-size: 0.9em;
+    font-family: Apud-Roman;
+    min-width: 650px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    line-height: 1.6;
 }
 
-.label tr td label {
-	display: block;
+.styled-table thead tr {
+    background-color: #b22525;
+    color: #ffffff;
+    font-weight:bold;
 }
 
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
 
-[data-toggle="toggle"] {
-	display: none;
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #b5b5b5;
+}
+
+.styled-table tbody.row-wrapper tr:hover{
+    background: #f3f3f3;
+}
+
+.tableauPlaceholder {	z-index: 1;
+        content: none;
+	margin:20px;
+	width:800px;
+}
+
+.header-table {
+	width:100%;
+}
+	
+/******************************************************************
+Tabs
+******************************************************************/
+
+ /* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  margin-left: 20px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+.tab button:after {
+   content: none;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
 }
