--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ General CSS
 }
 
 
-.collapse-content {
+.tab-content {
   overflow: hidden;
 	display:none;
 
@@ -431,44 +431,3 @@ Tables and graphs
 	width:100%;
 }
 	
-/******************************************************************
-Tabs
-******************************************************************/
-
- /* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  margin-left: 20px;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-.tab button:after {
-   content: none;
-}
-
-.tabcontent {
-   display: none;
-}
-
